Fix text align

--- a/src/pages/SearchPage/SearchPage.module.scss
+++ b/src/pages/SearchPage/SearchPage.module.scss
@@ -3,3 +3,8 @@
     margin-bottom: 16px;
     font-weight: 600;
 }
+
+.text {
+    text-align: center !important;
+}
+
